syntax = "proto3";

package pam;
option go_package = "pkg/pb";

message PAMAuthentication {
  string token = 1;
  string local_socket = 2;
}
